--- a/Symphony_Sien/Symphony_Sien/Symphony_Sien.vbproj
+++ b/Symphony_Sien/Symphony_Sien/Symphony_Sien.vbproj
@@ -72,11 +72,17 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="passwordForm.Designer.vb">
+      <DependentUpon>passwordForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="passwordForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="TopForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TopForm.Designer.vb">
+      <DependentUpon>TopForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -94,6 +100,37 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Util.vb" />
+    <Compile Include="ハウス日誌.Designer.vb">
+      <DependentUpon>ハウス日誌.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ハウス日誌.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="入居者登録.Designer.vb">
+      <DependentUpon>入居者登録.vb</DependentUpon>
+    </Compile>
+    <Compile Include="入居者登録.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="印鑑パスワード.Designer.vb">
+      <DependentUpon>印鑑パスワード.vb</DependentUpon>
+    </Compile>
+    <Compile Include="印鑑パスワード.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="居室登録.Designer.vb">
+      <DependentUpon>居室登録.vb</DependentUpon>
+    </Compile>
+    <Compile Include="居室登録.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="洗濯関係.Designer.vb">
+      <DependentUpon>洗濯関係.vb</DependentUpon>
+    </Compile>
+    <Compile Include="洗濯関係.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -101,6 +138,18 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="passwordForm.resx">
+      <DependentUpon>passwordForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TopForm.resx">
+      <DependentUpon>TopForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="入居者登録.resx">
+      <DependentUpon>入居者登録.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="印鑑パスワード.resx">
+      <DependentUpon>印鑑パスワード.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -113,6 +162,18 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="ADODB">
+      <Guid>{2A75196C-D9EB-4129-B803-931327F72D5C}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <Private>True</Private>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
