ハウス日誌：印刷の画像部分の処理変更

--- a/Symphony_Sien/Symphony_Sien/Symphony_Sien.vbproj
+++ b/Symphony_Sien/Symphony_Sien/Symphony_Sien.vbproj
@@ -59,7 +59,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="ymdBox">
-      <HintPath>\\primergytx100s1\Hakojun\事務\さかもと\Visual Studio 2010\Projects\ymdBox\ymdBox\ymdBox\bin\Release\ymdBox.dll</HintPath>
+      <HintPath>C:\Users\Owner\Desktop\ymdBox.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
